@@ -3,6 +3,10 @@
 # $Header: $
 
   24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
+  cacti/netapp/scripts/ss_netapp.php:
+  Cleaning the script up a little bit. This is working in production.
+
+  24 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
   cacti/netapp/script_server/netapp-luns.xml,
   cacti/netapp/script_server/netapp-volumes.xml:
   Clean up the XML for the volumes query and add lun/vol to the proper
